# MagmaCublasTestFunctions

./: CMakeLists.txt  README
CMakeModules/: FindMAGMA.cmake
src/: main.cpp
